PROD-12-18-19/force-app/main/default/objects/Property__c/fields/Clear_Height_UOM__c.field-meta.xml
<CustomField>
    <fullName>Clear_Height_UOM__c</fullName>
    <label>Clear Height UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Meters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>