PROD-12-18-19/force-app/main/default/objects/Property__c/fields/Expandable__c.field-meta.xml
<CustomField>
    <fullName>Expandable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expandable</label>
    <type>Checkbox</type>
</CustomField>