PROD-12-18-19/force-app/main/default/objects/Property__c/fields/IDIG_Region__c.field-meta.xml
<CustomField>
    <fullName>IDIG_Region__c</fullName>
    <label>IDIG Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IDIG_Region</valueSetName>
    </valueSet>
</CustomField>