PROD-12-18-19/force-app/main/default/objects/Property__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>