PROD-12-18-19/force-app/main/default/objects/Property__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Baltimore</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Central Florida</fullName>
            </value>
            <value>
                <fullName>Central Valley</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Cincinnati</fullName>
            </value>
            <value>
                <fullName>Cleveland</fullName>
            </value>
            <value>
                <fullName>Columbus OH</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Dallas / Fort Worth</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Detroit</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Ft. Lauderdale</fullName>
            </value>
            <value>
                <fullName>Harrisburg</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Indianapolis</fullName>
            </value>
            <value>
                <fullName>Inland Empire</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Jacksonville</fullName>
            </value>
            <value>
                <fullName>Las Vegas</fullName>
            </value>
            <value>
                <fullName>Lehigh Valley</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Louisville</fullName>
            </value>
            <value>
                <fullName>Memphis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>