PROD-12-18-19/force-app/main/default/objects/Property__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>PostalCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>