PROD-12-18-19/force-app/main/default/objects/Property__c/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <label>Submarket</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Airport/I-20W</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Atlanta - NE Submarket</fullName>
            </value>
            <value>
                <fullName>Atlanta - Northeast</fullName>
            </value>
            <value>
                <fullName>Columbia, SC</fullName>
            </value>
            <value>
                <fullName>Columbus, GA</fullName>
            </value>
            <value>
                <fullName>East Atlanta</fullName>
            </value>
            <value>
                <fullName>Forsyth County</fullName>
            </value>
            <value>
                <fullName>Hamilton Mill Business Center - NE Atlanta</fullName>
            </value>
            <value>
                <fullName>I-20 W</fullName>
            </value>
            <value>
                <fullName>I-20 West</fullName>
            </value>
            <value>
                <fullName>I-20W</fullName>
            </value>
            <value>
                <fullName>I-20W/Fulton</fullName>
            </value>
            <value>
                <fullName>I-20W/NE Atlanta</fullName>
            </value>
            <value>
                <fullName>I-75 South</fullName>
            </value>
            <value>
                <fullName>I-85</fullName>
            </value>
            <value>
                <fullName>NE Atlanta</fullName>
            </value>
            <value>
                <fullName>NE/North Central</fullName>
            </value>
            <value>
                <fullName>North Atlanta</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>Northeast Atlanta</fullName>
            </value>
            <value>
                <fullName>Northeast Submarket</fullName>
            </value>
            <value>
                <fullName>Northeast/I-85</fullName>
            </value>
            <value>
                <fullName>Northwest &amp; I-20 West</fullName>
            </value>
            <value>
                <fullName>NW Atlanta</fullName>
            </value>
            <value>
                <fullName>Savannah</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>South &amp; NE Atlanta</fullName>
            </value>
            <value>
                <fullName>South Atlanta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>