PROD-12-18-19/force-app/main/default/objects/Property__c/recordTypes/Industrial_Building.recordType-meta.xml
<RecordType>
    <fullName>Industrial_Building</fullName>
    <active>true</active>
    <label>Industrial Building</label>
</RecordType>