PROD-12-18-19/force-app/main/default/objects/Property__c/validationRules/MaxOccupancy.validationRule-meta.xml
<ValidationRule>
    <fullName>MaxOccupancy</fullName>
    <active>true</active>
    <errorConditionFormula>Occupied_Space__c &gt;  Building_Size__c</errorConditionFormula>
    <errorMessage>Occupied space cannot exceed building size.</errorMessage>
</ValidationRule>