PROD-12-18-19/force-app/main/default/objects/Property__c/listViews/Atlanta_Properties.listView-meta.xml
<ListView>
    <fullName>Atlanta_Properties</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Building_Size__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market__c</field>
        <operation>equals</operation>
        <value>Atlanta</value>
    </filters>
    <label>Atlanta Properties</label>
</ListView>